// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Order.js render with data 1`] = `
<div
  className="Order"
>
  <div
    className="Order-header"
  >
    <span
      className="Order-shop"
    >
      test
    </span>
    <span
      id="date"
    >
      123
    </span>
  </div>
  <div
    className="Order-items"
  />
</div>
`;

exports[`Order.js render with data and items 1`] = `
<div
  className="Order"
>
  <div
    className="Order-header"
  >
    <span
      className="Order-shop"
    >
      test
    </span>
    <span
      id="date"
    >
      123
    </span>
  </div>
  <div
    className="Order-items"
  >
    <div
      className="Order-item"
      key="0"
    >
      aa
    </div>
    <div
      className="Order-item"
      key="1"
    >
      ss
    </div>
    <div
      className="Order-item"
      key="2"
    >
      dd
    </div>
  </div>
</div>
`;
